fixed loader and error message on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -499,6 +499,16 @@ EMPTY STAR
   .details {
     margin-top: -23px;
   }
+
+  .loader {
+    height: 65px;
+    width: 65px;
+    margin-top: 0;
+  }
+
+  .error {
+    padding-top: 3rem;
+  }
 }
 
 @media screen and (max-width: 470px) {
